--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix= "og: http://ogp.me/ns#">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" >
+    <meta 
+    property="og:title"
+    content="Meet Vishnu!"
+    />
+    <meta 
+      name="image"
+      property="og:image"
+      content="%PUBLIC_URL%/Thumbnail.png"
+    />
+    <meta 
+      name="author" 
+      content="Vishnu"
+    />
+    <meta 
+      property="og:description"
+      content="View my personal website and get in touch with me!"
+    />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
