--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,10 @@
       property="og:image"
       content="%PUBLIC_URL%/Thumbnail.png"
     />
-    <meta 
-      name="author" 
-      content="Vishnu"
-    />
+    <meta name="author" content="Vishnu Gopal Rajan">
     <meta 
       property="og:description"
-      content="View my personal website and get in touch with me!"
+      content="View my personal website and get in touch with me! Engaged and Attentive Software Developer with a wide range of Computer Science skills and expertise. When it comes to solving problems, I am more of a creative and out-of-the-box thinker coming up with well-rounded solutions. Working on various projects involving computers has taught me to get better with success and learn with failure. These team and individual efforts have made me a robust and smart thinker, with strong verbal and written communication skills."
     />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -42,8 +39,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&display=swap" rel="stylesheet">
-    <title>Meet Vishnu!</title>
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&display=swap" rel="stylesheet">
+    <!-- <title>Meet Vishnu!</title> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
