--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en" prefix= "og: http://ogp.me/ns#"><head><meta charset="utf-8"/><link rel="icon" href="/VGicon.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta 
+<!doctype html><html lang="en" prefix= "og: http://ogp.me/ns#"><head><meta charset="utf-8"/><link rel="icon" href="/VGLogo.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta 
     property="og:title"
     content="Meet Vishnu!"
     />
