--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       property="og:description"
       content="View my personal website and get in touch with me! Engaged and Attentive Software Developer with a wide range of Computer Science skills and expertise. When it comes to solving problems, I am more of a creative and out-of-the-box thinker coming up with well-rounded solutions. Working on various projects involving computers has taught me to get better with success and learn with failure. These team and individual efforts have made me a robust and smart thinker, with strong verbal and written communication skills."
     />
-    <link rel="icon" href="%PUBLIC_URL%/VGicon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/VGLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
