--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" prefix= "og: http://ogp.me/ns#">
+<html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
-    <meta charset="utf-8" >
-    <meta 
-    property="og:title"
-    content="Meet Vishnu!"
-    />
-    <meta 
+    <meta charset="utf-8" />
+    <meta property="og:title" content="Meet Vishnu!" />
+    <meta
       name="image"
       property="og:image"
       content="%PUBLIC_URL%/Thumbnail.png"
     />
-    <meta name="author" content="Vishnu Gopal Rajan">
-    <meta 
-      name="description" 
+    <meta name="author" content="Vishnu Gopal Rajan" />
+    <meta
+      name="description"
       property="og:description"
       content="View my personal website and get in touch with me! Engaged and Attentive Software Developer with a wide range of Computer Science skills and expertise. When it comes to solving problems, I am more of a creative and out-of-the-box thinker coming up with well-rounded solutions. Working on various projects involving computers has taught me to get better with success and learn with failure. These team and individual efforts have made me a robust and smart thinker, with strong verbal and written communication skills."
     />
@@ -35,9 +32,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&display=swap" rel="stylesheet">
-    <!-- <title>Meet Vishnu!</title> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Meet Vishnu!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
